sql/test/unit/checks/aggr_no_from_no_group_check_and_agg_fail.exp
SELECT count(*) as n, CHECK(count(*) < 1);
^
|
 ----- ERROR
Error: line 1, character 0:
Failed constraint: count() < 1
